Mobile layout fixes
fixed banner image not showing properly on mobile as well as content overflowing on the x axis on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -8,15 +8,10 @@
     background-image: linear-gradient( rgba(99, 97, 85, 0.9), rgb(53, 44, 44, 0.9) ), url("./../img/film_burn.jpg");
 }
 
-h1, h2{
+h1{
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     letter-spacing: -0.2rem;
-}
-
-.contact-bg h1{
-    font-weight: 900;
-    font-size: 5vw;
 }
 
 .body-content{
@@ -49,6 +44,10 @@ h1, h2{
 
 .form-content textarea, input{
     width: 100%;
+}
+
+.form-content .col{
+    margin: 0 1%;
 }
 
 @media (max-width: 992px){
