--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,10 @@
     background-size: cover;
 }
 
+.banner-bg > .col-md{
+    padding: 0% 2%;
+}
+
 .data-box h1, .data-box h2{
     font-family: Helvetica, sans-serif;
     font-weight: bold;
@@ -18,15 +22,13 @@
 .data-box h1{
     letter-spacing: -0.25rem;
     line-height: 10vh;
-    font-size:100px;
-    font-size: 7.5vw;
+    font-size: 7rem;
 }
 
 .data-box h2{
     letter-spacing: -0.25rem;
     line-height: 6vh;
-    font-size:100px;
-    font-size: 5vw;
+    font-size: 5rem;
 }
 
 .data-box h1:hover, .data-box h2:hover{
@@ -70,5 +72,17 @@ i{
 @media (max-width: 992px){
     .data-box{
         margin: 2.5% 10%;
+    }
+
+    .data-box h1{
+        font-size: 4rem;
+    }
+
+    .data-box h2{
+        font-size: 3rem;
+    }
+
+    .data-box img{
+        width:10%;
     }
 }
