--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,9 +58,8 @@ h2{
 
 .portfolio-content iframe{
     width: 100%;
-    height: 100vh;
+    height: 50vh;
 }
-
 
 em{
     font-size:5vw;
@@ -73,5 +72,17 @@ em{
 @media (max-width: 992px){
     .portfolio-content{
         margin: 2.5% 10%;
+    }
+
+    .portfolio-content h1{
+        font-size: 2.5rem;
+    }
+
+    .portfolio-content h2{
+        font-size: 1.75rem;
+    }
+
+    .tools p{
+        font-size: 0.6rem;
     }
 }
