--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,25 @@ body{
 
 .navbar{
     --bs-navbar-toggler-focus-width: 0rem;
+    width: 100%;
+}
+
+/* Fix really weird issue with bootstrap rows causing horiz scroll*/
+.row{
+    --bs-gutter-x: 0;
 }
 
 .banner-bg img{
-    width: 80%;
+    width: 70%;
+    /* height: 30vh; */
     border-radius: 50%;
     transition: 0.25s;
 }
 
 .banner-bg img:hover{
     border-radius: 25%;
-    width:90%;
+    width:80%;
+    /* height: 33vh; */
 }
 
 .banner-bg{
@@ -41,6 +49,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
+
 
     /* Background stuff */
     padding: 0 20%; 
@@ -56,8 +65,63 @@ body{
     font-size: 4rem;
 }
 
+.banner-bg p{
+    font-size: 1.25rem;
+}
+
 footer{
     padding: 1.5%;
     color: white;
     text-align: center;
+}
+
+@media (max-width: 992px){
+    .banner-bg{
+        padding: 0% 10%;
+        /* height: 50vh; */
+    }
+    
+    .banner-bg img{
+        width:50%;
+    }
+
+    .banner-bg img:hover{
+        width:52.5%;
+    }
+
+    .banner-bg h1{
+        font-size: 3rem;
+    }
+
+    .banner-bg h2{
+        font-size: 1.5rem;
+    }
+
+    .banner-bg p{
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width: 576px){
+
+    /* .banner-bg img{
+        width:35%;
+    }
+
+    .banner-bg img:hover{
+        width:37.5%;
+    } */
+
+    .banner-bg h1{
+        font-size: 2.5rem;
+    }
+
+    .banner-bg h2{
+        font-size: 1.25rem;
+    }
+
+    .banner-bg p{
+        font-size: 0.9rem;
+    }
 }
